# nonogram

./: CMakeLists.txt  README.md  cellbutton.cpp  common_vars.hpp  create_db.cpp  database.cpp  database.h  gamefield.cpp  gamewindow.cpp  gamewindow.h  gamewindow.ui  login_window.ui  main.cpp  main_window.ui  nonogram.cpp  nonogram.hpp  register_window.h  register_window.ui  users3.db
client/: CMakeLists.txt  game_field.cpp  game_field.h  game_field.ui  include.qrc  login_window.cpp  login_window.h  login_window.ui  main.cpp  main_window.cpp  main_window.h  main_window.ui  new_game_options.cpp  new_game_options.h  new_game_options.ui  register_window.cpp  register_window.h  register_window.ui
common/: include.qrc
include/: cellbutton.h  gamefield.h  login_window.h  mainwindow.h
server/db/: create_bd.cpp  users.hpp
server/logic/: CMakeLists.txt  nonogram.cpp  nonogram.hpp  nonogram_example.cpp  process_image.cpp
src/: login_window.cpp  mainwindow.cpp  register_window.cpp
